# ts-rs

ts-rs/: Cargo.toml
ts-rs/src/: lib.rs
ts-rs/tests/: simple.rs
