[package]
name = "ts-rs"
version = "3.0.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"
license = "MIT"
description = "generate typescript bindings from rust types"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies]
ts-rs-macros = { version = "3.0.0", path = "../macros", features = ["serde-compat"] }
dprint-plugin-typescript = { version = "0.43" }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
